--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
 /* Grundläggande stil för hela sidan */
 body {
     background-color: #F2F1F0;
-    font-family: Arial, sans-serif;
+    font-family: Calibri, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -40,8 +40,8 @@ body {
 /* Layout för innehåll med sidebar */
 .content-with-sidebar {
     display: flex;
-    justify-content: space-between;
-    gap: 20px;
+    justify-content: flex-start;
+    gap: 10px;
     padding: 20px;
     flex-wrap: wrap; /* Gör så att layouten kan brytas till en ny rad vid små skärmar */
 }
@@ -61,14 +61,17 @@ body {
 
 .image-container-index {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
     background-color: #FFFFFF;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    max-width: 500px;
-    margin: 0 auto;
+    max-width: 50%; /* Bildens strl */
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 40px;
 }
 
 /* Stil för bilden */
@@ -96,6 +99,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-top: 40px;
 }
 
 /* Stil för vädersektionen */
